# Englinux

./: README.md
v1.0/: CMakeLists.txt
v1.0/include/: main.h
v1.0/include/display/: author.h  copyRight.h  display.h  display_width.h  endSay.h  error.h  find_help.h  print.h  print_help.h  print_words.h
v1.0/include/execute/: clear.h  execute.h  execute_four_token.h  execute_one_token.h  execute_three_token.h  execute_two_token.h  find.h  four_token.h  help.h  is_all_digit.h  match.h  one_token.h  parser_first_token.h  parser_fourth_token.h  parser_second_token.h  parser_third_token.h  three_token.h  two_token.h
v1.0/include/lexer/: lexer.h
v1.0/include/words_lib/: words.h
v1.0/py/: cet4.xls  cet6.xls  uncet6.xls  word3.py  words.py  提问词.md
v1.0/src/: main.c
v1.0/src/display/: author.c  copyRight.c  display.c  display_width.c  endSay.c  find_help.c  print.c  print_help.c  print_words.c
v1.0/src/execute/: clear.c  execute.c  execute_four_token.c  execute_one_token.c  execute_three_token.c  execute_two_token.c  find.c  four_token.c  help.c  is_all_digit.c  match.c  one_token.c  parser_first_token.c  parser_fourth_token.c  parser_second_token.c  parser_third_token.c  three_token.c  two_token.c
v1.0/src/lexer/: lexer.c
v1.0/src/words_lib/: cet4.c  cet6.c  word_set.c  words.c
v1.0/src/words_lib/cet4/: cet4_a.c  cet4_b.c  cet4_c.c  cet4_d.c  cet4_e.c  cet4_f.c  cet4_g.c  cet4_h.c  cet4_i.c  cet4_j.c  cet4_k.c  cet4_l.c  cet4_m.c  cet4_n.c  cet4_o.c  cet4_p.c  cet4_q.c  cet4_r.c  cet4_s.c  cet4_t.c  cet4_u.c  cet4_v.c  (+3 more)
v1.0/test/: struct  struct.c
(+25 files in other folders)
